--- a/test/index.html
+++ b/test/index.html
@@ -28,6 +28,7 @@
     <li><a href="/dummy.gif?12345">Query Param Image Link</a></li>
     <li><a href="#">Hash link</a></li>
     <li><a href="/reload.html#foo">New assets track with hash link</a></li>
+    <li><a href="/back.html">Back button</a></li>
     <li><h5>If you stop the server or go into airplane/offline mode</h5></li>
     <li><a href="/doesnotexist.html">A page with client error (4xx, rfc2616 sec. 10.4) should error out</a></li>
     <li><a href="/500">Also server errors (5xx, rfc2616 sec. 10.5) should error out</a></li>
